src/parser/go_test/parser/TuringParser.cpp

// Generated from Turing.g4 by ANTLR 4.7.2


#include "TuringListener.h"

#include "TuringParser.h"


using namespace antlrcpp;
using namespace antlr4;

TuringParser::TuringParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

TuringParser::~TuringParser() {
  delete _interpreter;
}

std::string TuringParser::getGrammarFileName() const {
  return "Turing.g4";
}

const std::vector<std::string>& TuringParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& TuringParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

TuringParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TuringParser::TopLevelContext *> TuringParser::ProgramContext::topLevel() {
  return getRuleContexts<TuringParser::TopLevelContext>();
}

TuringParser::TopLevelContext* TuringParser::ProgramContext::topLevel(size_t i) {
  return getRuleContext<TuringParser::TopLevelContext>(i);
}


size_t TuringParser::ProgramContext::getRuleIndex() const {
  return TuringParser::RuleProgram;
}

void TuringParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void TuringParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

TuringParser::ProgramContext* TuringParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, TuringParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(122);
      topLevel();
      setState(125); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TuringParser::STRING_LITERAL)
      | (1ULL << TuringParser::INTEGER_LITERAL)
      | (1ULL << TuringParser::TYPE)
      | (1ULL << TuringParser::VAR)
      | (1ULL << TuringParser::PROCEDURE)
      | (1ULL << TuringParser::FUNCTION)
      | (1ULL << TuringParser::CLASS)
      | (1ULL << TuringParser::PROCESS)
      | (1ULL << TuringParser::EXIT)
      | (1ULL << TuringParser::BEGIN)
      | (1ULL << TuringParser::RETURN)
      | (1ULL << TuringParser::RESULT)
      | (1ULL << TuringParser::NEW)
      | (1ULL << TuringParser::FREE)
      | (1ULL << TuringParser::FORK)
      | (1ULL << TuringParser::PUT)
      | (1ULL << TuringParser::ARRAY)
      | (1ULL << TuringParser::DEFERRED)
      | (1ULL << TuringParser::FORWARD)
      | (1ULL << TuringParser::BODY)
      | (1ULL << TuringParser::NOT)
      | (1ULL << TuringParser::CARET)
      | (1ULL << TuringParser::L_PAREN))) != 0) || ((((_la - 67) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 67)) & ((1ULL << (TuringParser::CHEAT - 67))
      | (1ULL << (TuringParser::PLUS - 67))
      | (1ULL << (TuringParser::MINUS - 67))
      | (1ULL << (TuringParser::IDENTIFIER - 67)))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TopLevelContext ------------------------------------------------------------------

TuringParser::TopLevelContext::TopLevelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TuringParser::StatementOrDeclarationContext* TuringParser::TopLevelContext::statementOrDeclaration() {
  return getRuleContext<TuringParser::StatementOrDeclarationContext>(0);
}

TuringParser::ClassDeclarationContext* TuringParser::TopLevelContext::classDeclaration() {
  return getRuleContext<TuringParser::ClassDeclarationContext>(0);
}


size_t TuringParser::TopLevelContext::getRuleIndex() const {
  return TuringParser::RuleTopLevel;
}

void TuringParser::TopLevelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTopLevel(this);
}

void TuringParser::TopLevelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTopLevel(this);
}

TuringParser::TopLevelContext* TuringParser::topLevel() {
  TopLevelContext *_localctx = _tracker.createInstance<TopLevelContext>(_ctx, getState());
  enterRule(_localctx, 2, TuringParser::RuleTopLevel);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(129);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TuringParser::STRING_LITERAL:
      case TuringParser::INTEGER_LITERAL:
      case TuringParser::TYPE:
      case TuringParser::VAR:
      case TuringParser::PROCEDURE:
      case TuringParser::FUNCTION:
      case TuringParser::PROCESS:
      case TuringParser::EXIT:
      case TuringParser::BEGIN:
      case TuringParser::RETURN:
      case TuringParser::RESULT:
      case TuringParser::NEW:
      case TuringParser::FREE:
      case TuringParser::FORK:
      case TuringParser::PUT:
      case TuringParser::ARRAY:
      case TuringParser::DEFERRED:
      case TuringParser::FORWARD:
      case TuringParser::BODY:
      case TuringParser::NOT:
      case TuringParser::CARET:
      case TuringParser::L_PAREN:
      case TuringParser::CHEAT:
      case TuringParser::PLUS:
      case TuringParser::MINUS:
      case TuringParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(127);
        statementOrDeclaration();
        break;
      }

      case TuringParser::CLASS: {
        enterOuterAlt(_localctx, 2);
        setState(128);
        classDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProcHeaderContext ------------------------------------------------------------------

TuringParser::ProcHeaderContext::ProcHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TuringParser::ProcHeaderContext::IDENTIFIER() {
  return getToken(TuringParser::IDENTIFIER, 0);
}

tree::TerminalNode* TuringParser::ProcHeaderContext::PROCEDURE() {
  return getToken(TuringParser::PROCEDURE, 0);
}

tree::TerminalNode* TuringParser::ProcHeaderContext::PROCESS() {
  return getToken(TuringParser::PROCESS, 0);
}

tree::TerminalNode* TuringParser::ProcHeaderContext::L_PAREN() {
  return getToken(TuringParser::L_PAREN, 0);
}

tree::TerminalNode* TuringParser::ProcHeaderContext::R_PAREN() {
  return getToken(TuringParser::R_PAREN, 0);
}

TuringParser::ParamDeclarationListContext* TuringParser::ProcHeaderContext::paramDeclarationList() {
  return getRuleContext<TuringParser::ParamDeclarationListContext>(0);
}


size_t TuringParser::ProcHeaderContext::getRuleIndex() const {
  return TuringParser::RuleProcHeader;
}

void TuringParser::ProcHeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProcHeader(this);
}

void TuringParser::ProcHeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProcHeader(this);
}

TuringParser::ProcHeaderContext* TuringParser::procHeader() {
  ProcHeaderContext *_localctx = _tracker.createInstance<ProcHeaderContext>(_ctx, getState());
  enterRule(_localctx, 4, TuringParser::RuleProcHeader);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    _la = _input->LA(1);
    if (!(_la == TuringParser::PROCEDURE

    || _la == TuringParser::PROCESS)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(132);
    match(TuringParser::IDENTIFIER);
    setState(138);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      setState(133);
      match(TuringParser::L_PAREN);
      setState(135);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << TuringParser::VAR)
        | (1ULL << TuringParser::PROCEDURE)
        | (1ULL << TuringParser::FUNCTION)
        | (1ULL << TuringParser::PROCESS)
        | (1ULL << TuringParser::DEFERRED)
        | (1ULL << TuringParser::FORWARD)
        | (1ULL << TuringParser::BODY))) != 0) || _la == TuringParser::IDENTIFIER) {
        setState(134);
        paramDeclarationList(0);
      }
      setState(137);
      match(TuringParser::R_PAREN);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncHeaderContext ------------------------------------------------------------------

TuringParser::FuncHeaderContext::FuncHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TuringParser::FuncHeaderContext::FUNCTION() {
  return getToken(TuringParser::FUNCTION, 0);
}

std::vector<tree::TerminalNode *> TuringParser::FuncHeaderContext::IDENTIFIER() {
  return getTokens(TuringParser::IDENTIFIER);
}

tree::TerminalNode* TuringParser::FuncHeaderContext::IDENTIFIER(size_t i) {
  return getToken(TuringParser::IDENTIFIER, i);
}

tree::TerminalNode* TuringParser::FuncHeaderContext::COLON() {
  return getToken(TuringParser::COLON, 0);
}

TuringParser::TypeSpecContext* TuringParser::FuncHeaderContext::typeSpec() {
  return getRuleContext<TuringParser::TypeSpecContext>(0);
}

tree::TerminalNode* TuringParser::FuncHeaderContext::L_PAREN() {
  return getToken(TuringParser::L_PAREN, 0);
}

tree::TerminalNode* TuringParser::FuncHeaderContext::R_PAREN() {
  return getToken(TuringParser::R_PAREN, 0);
}

TuringParser::ParamDeclarationListContext* TuringParser::FuncHeaderContext::paramDeclarationList() {
  return getRuleContext<TuringParser::ParamDeclarationListContext>(0);
}


size_t TuringParser::FuncHeaderContext::getRuleIndex() const {
  return TuringParser::RuleFuncHeader;
}

void TuringParser::FuncHeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncHeader(this);
}

void TuringParser::FuncHeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncHeader(this);
}

TuringParser::FuncHeaderContext* TuringParser::funcHeader() {
  FuncHeaderContext *_localctx = _tracker.createInstance<FuncHeaderContext>(_ctx, getState());
  enterRule(_localctx, 6, TuringParser::RuleFuncHeader);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    match(TuringParser::FUNCTION);
    setState(141);
    match(TuringParser::IDENTIFIER);
    setState(147);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TuringParser::L_PAREN) {
      setState(142);
      match(TuringParser::L_PAREN);
      setState(144);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << TuringParser::VAR)
        | (1ULL << TuringParser::PROCEDURE)
        | (1ULL << TuringParser::FUNCTION)
        | (1ULL << TuringParser::PROCESS)
        | (1ULL << TuringParser::DEFERRED)
        | (1ULL << TuringParser::FORWARD)
        | (1ULL << TuringParser::BODY))) != 0) || _la == TuringParser::IDENTIFIER) {
        setState(143);
        paramDeclarationList(0);
      }
      setState(146);
      match(TuringParser::R_PAREN);
    }
    setState(150);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == TuringParser::IDENTIFIER) {
      setState(149);
      match(TuringParser::IDENTIFIER);
    }
    setState(152);
    match(TuringParser::COLON);
    setState(153);
    typeSpec();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SubprogramHeaderContext ------------------------------------------------------------------

TuringParser::SubprogramHeaderContext::SubprogramHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TuringParser::FuncHeaderContext* TuringParser::SubprogramHeaderContext::funcHeader() {
  return getRuleContext<TuringParser::FuncHeaderContext>(0);
}

TuringParser::ProcHeaderContext* TuringParser::SubprogramHeaderContext::procHeader() {
  return getRuleContext<TuringParser::ProcHeaderContext>(0);
}

TuringParser::SubprogramPrefixContext* TuringParser::SubprogramHeaderContext::subprogramPrefix() {
  return getRuleContext<TuringParser::SubprogramPrefixContext>(0);
}


size_t TuringParser::SubprogramHeaderContext::getRuleIndex() const {
  return TuringParser::RuleSubprogramHeader;
}

void TuringParser::SubprogramHeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSubprogramHeader(this);
}

void TuringParser::SubprogramHeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSubprogramHeader(this);
}

TuringParser::SubprogramHeaderContext* TuringParser::subprogramHeader() {
  SubprogramHeaderContext *_localctx = _tracker.createInstance<SubprogramHeaderContext>(_ctx, getState());
  enterRule(_localctx, 8, TuringParser::RuleSubprogramHeader);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TuringParser::DEFERRED)
      | (1ULL << TuringParser::FORWARD)
      | (1ULL << TuringParser::BODY))) != 0)) {
      setState(155);
      subprogramPrefix();
    }
    setState(160);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TuringParser::FUNCTION: {
        setState(158);
        funcHeader();
        break;
      }

      case TuringParser::PROCEDURE:
      case TuringParser::PROCESS: {
        setState(159);
        procHeader();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SubprogramDeclarationContext ------------------------------------------------------------------

TuringParser::SubprogramDeclarationContext::SubprogramDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TuringParser::SubprogramHeaderContext* TuringParser::SubprogramDeclarationContext::subprogramHeader() {
  return getRuleContext<TuringParser::SubprogramHeaderContext>(0);
}

TuringParser::ProcBodyContext* TuringParser::SubprogramDeclarationContext::procBody() {
  return getRuleContext<TuringParser::ProcBodyContext>(0);
}

tree::TerminalNode* TuringParser::SubprogramDeclarationContext::END() {
  return getToken(TuringParser::END, 0);
}

tree::TerminalNode* TuringParser::SubprogramDeclarationContext::IDENTIFIER() {
  return getToken(TuringParser::IDENTIFIER, 0);
}


size_t TuringParser::SubprogramDeclarationContext::getRuleIndex() const {
  return TuringParser::RuleSubprogramDeclaration;
}

void TuringParser::SubprogramDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSubprogramDeclaration(this);
}

void TuringParser::SubprogramDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSubprogramDeclaration(this);
}

TuringParser::SubprogramDeclarationContext* TuringParser::subprogramDeclaration() {
  SubprogramDeclarationContext *_localctx = _tracker.createInstance<SubprogramDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, TuringParser::RuleSubprogramDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    subprogramHeader();
    setState(163);
    procBody();
    setState(164);
    match(TuringParser::END);
    setState(165);
    match(TuringParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SubprogramPrefixContext ------------------------------------------------------------------

TuringParser::SubprogramPrefixContext::SubprogramPrefixContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TuringParser::SubprogramPrefixContext::DEFERRED() {
  return getToken(TuringParser::DEFERRED, 0);
}

tree::TerminalNode* TuringParser::SubprogramPrefixContext::BODY() {
  return getToken(TuringParser::BODY, 0);
}

tree::TerminalNode* TuringParser::SubprogramPrefixContext::FORWARD() {
  return getToken(TuringParser::FORWARD, 0);
}


size_t TuringParser::SubprogramPrefixContext::getRuleIndex() const {
  return TuringParser::RuleSubprogramPrefix;
}

void TuringParser::SubprogramPrefixContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSubprogramPrefix(this);
}

void TuringParser::SubprogramPrefixContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSubprogramPrefix(this);
}

TuringParser::SubprogramPrefixContext* TuringParser::subprogramPrefix() {
  SubprogramPrefixContext *_localctx = _tracker.createInstance<SubprogramPrefixContext>(_ctx, getState());
  enterRule(_localctx, 12, TuringParser::RuleSubprogramPrefix);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(167);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TuringParser::DEFERRED)
      | (1ULL << TuringParser::FORWARD)
      | (1ULL << TuringParser::BODY))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDeclarationContext ------------------------------------------------------------------

TuringParser::ClassDeclarationContext::ClassDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TuringParser::ClassDeclarationContext::CLASS() {
  return getToken(TuringParser::CLASS, 0);
}

std::vector<tree::TerminalNode *> TuringParser::ClassDeclarationContext::IDENTIFIER() {
  return getTokens(TuringParser::IDENTIFIER);
}

tree::TerminalNode* TuringParser::ClassDeclarationContext::IDENTIFIER(size_t i) {
  return getToken(TuringParser::IDENTIFIER, i);
}

tree::TerminalNode* TuringParser::ClassDeclarationContext::END() {
  return getToken(TuringParser::END, 0);
}

std::vector<TuringParser::ClassBodyContext *> TuringParser::ClassDeclarationContext::classBody() {
  return getRuleContexts<TuringParser::ClassBodyContext>();
}

TuringParser::ClassBodyContext* TuringParser::ClassDeclarationContext::classBody(size_t i) {
  return getRuleContext<TuringParser::ClassBodyContext>(i);
}


size_t TuringParser::ClassDeclarationContext::getRuleIndex() const {
  return TuringParser::RuleClassDeclaration;
}

void TuringParser::ClassDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassDeclaration(this);
}

void TuringParser::ClassDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<TuringListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassDeclaration(this);
}

TuringParser::ClassDeclarationContext* TuringParser::classDeclaration() {
  ClassDeclarationContext *_localctx = _tracker.createInstance<ClassDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 14, TuringParser::RuleClassDeclaration);
  size_t _la = 0;
